[gd_scene load_steps=11 format=2]

[ext_resource path="res://tres/central_panel_style.tres" type="StyleBox" id=1]
[ext_resource path="res://scenes/ui/StartPanel.gd" type="Script" id=2]
[ext_resource path="res://tres/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/ui/GeneralButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui/button_plus.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "disappear"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.588235 )

[node name="StartPanel" type="PanelContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 2 )
anims/disappear = SubResource( 3 )

[node name="CenterC" type="CenterContainer" parent="."]
margin_left = 448.0
margin_top = 200.0
margin_right = 832.0
margin_bottom = 520.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelC" type="PanelContainer" parent="CenterC"]
margin_right = 384.0
margin_bottom = 320.0
rect_min_size = Vector2( 384, 320 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )

[node name="VBoxC" type="VBoxContainer" parent="CenterC/PanelC"]
margin_right = 384.0
margin_bottom = 320.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="Level" type="Label" parent="CenterC/PanelC/VBoxC"]
margin_right = 384.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 4 )
text = "Level 1"
align = 1
valign = 1

[node name="Target" type="RichTextLabel" parent="CenterC/PanelC/VBoxC"]
margin_top = 111.0
margin_right = 384.0
margin_bottom = 193.0
rect_min_size = Vector2( 128, 64 )
size_flags_horizontal = 7
size_flags_vertical = 6
bbcode_enabled = true
bbcode_text = "[center]Reach  [color=#c5da06]score 10[/color] within [color=#c5da06]10 grabs[/color][/center]"
text = "Reach  score 10 within 10 grabs"
fit_content_height = true
scroll_active = false

[node name="ItemHBoxC" type="HBoxContainer" parent="CenterC/PanelC/VBoxC"]
visible = false
margin_top = 192.0
margin_right = 384.0
margin_bottom = 256.0
alignment = 1

[node name="AddButton1" parent="CenterC/PanelC/VBoxC/ItemHBoxC" instance=ExtResource( 5 )]
margin_left = 92.0
margin_right = 156.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 6 )
expand = true

[node name="AddButton2" parent="CenterC/PanelC/VBoxC/ItemHBoxC" instance=ExtResource( 5 )]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 6 )
expand = true

[node name="AddButton3" parent="CenterC/PanelC/VBoxC/ItemHBoxC" instance=ExtResource( 5 )]
margin_left = 228.0
margin_right = 292.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Start" type="Button" parent="CenterC/PanelC/VBoxC"]
margin_top = 256.0
margin_right = 384.0
margin_bottom = 320.0
rect_min_size = Vector2( 128, 64 )
size_flags_horizontal = 3
text = "Start"

[node name="ItemsPanel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 5 )

[node name="CenterC" type="CenterContainer" parent="ItemsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxC" type="VBoxContainer" parent="ItemsPanel/CenterC"]
margin_left = 448.0
margin_top = 200.0
margin_right = 832.0
margin_bottom = 520.0
rect_min_size = Vector2( 384, 320 )
custom_constants/separation = 0

[node name="Back" type="Button" parent="ItemsPanel/CenterC/VBoxC"]
visible = false
margin_right = 384.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
text = "Back"

[node name="ItemList" type="ItemList" parent="ItemsPanel/CenterC/VBoxC"]
margin_right = 384.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/icon_margin = 0
same_column_width = true
fixed_icon_size = Vector2( 64, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_StartPanel_gui_input"]
[connection signal="animation_finished" from="AnimPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="CenterC/PanelC/VBoxC/ItemHBoxC/AddButton1" to="." method="_on_AddButton1_pressed"]
[connection signal="pressed" from="CenterC/PanelC/VBoxC/ItemHBoxC/AddButton2" to="." method="_on_AddButton2_pressed"]
[connection signal="pressed" from="CenterC/PanelC/VBoxC/ItemHBoxC/AddButton3" to="." method="_on_AddButton3_pressed"]
[connection signal="pressed" from="CenterC/PanelC/VBoxC/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="ItemsPanel/CenterC/VBoxC/Back" to="." method="_on_Back_pressed"]
[connection signal="item_selected" from="ItemsPanel/CenterC/VBoxC/ItemList" to="." method="_on_ItemList_item_selected"]
